--- a/ShopListPriceEditor/ShopListPriceEditor.csproj
+++ b/ShopListPriceEditor/ShopListPriceEditor.csproj
@@ -176,5 +176,8 @@
       <Version>2.2.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Constants\itemData.itm" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
